@@ -8,7 +8,13 @@ public class BlocklistUpdateTest {
     @Test
     public void testCtor() {
         Req req = new BlocklistUpdate(15);
-        Assert.assertEquals(new Integer(15), req.tag());
+        Assert.assertEquals(Integer.valueOf(15), req.tag());
         Assert.assertEquals("blocklist-update", req.method());
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new BlocklistUpdate();
+        Assert.assertEquals(Integer.valueOf(1), req.tag());
     }
 }
