@@ -8,7 +8,13 @@ public class PortCheckTest {
     @Test
     public void testCtor() {
         Req req = new PortCheck(11);
-        Assert.assertEquals(new Integer(11), req.tag());
+        Assert.assertEquals(Integer.valueOf(11), req.tag());
         Assert.assertEquals("port-test", req.method());
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new PortCheck();
+        Assert.assertEquals(Integer.valueOf(3), req.tag());
     }
 }
