@@ -10,7 +10,7 @@ public class QueueTest {
     @Test
     public void testArgs() {
         OptReq req = new Queue(10, Queue.To.TOP, 101, 102, 103);
-        Assert.assertEquals(new Integer(10), req.tag());
+        Assert.assertEquals(Integer.valueOf(10), req.tag());
         Assert.assertEquals(
                 Arrays.asList(101, 102, 103),
                 req.arguments().get("ids")
@@ -18,9 +18,15 @@ public class QueueTest {
     }
 
     @Test
+    public void testCtorNoArgs() {
+        Req req = new Queue(Queue.To.TOP, 101, 102, 103);
+        Assert.assertEquals(Integer.valueOf(4), req.tag());
+    }
+
+    @Test
     public void testEmpty() {
         OptReq req = new Queue(Queue.To.TOP);
-        Assert.assertNull(req.tag());
+        Assert.assertNotNull(req.tag());
         Assert.assertEquals("queue-move-top", req.method());
         Assert.assertNotNull(req.arguments());
         Assert.assertNull(req.arguments().get("ids"));
