@@ -3,7 +3,6 @@ package cordelia.rpc;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 
 public class RenamePathTest {
@@ -11,7 +10,7 @@ public class RenamePathTest {
     @Test
     public void testCtor() {
         OptReq req = new RenamePath(9, 15, "/tmp/dest", "src");
-        Assert.assertEquals(new Integer(9), req.tag());
+        Assert.assertEquals(Integer.valueOf(9), req.tag());
         Assert.assertEquals("torrent-rename-path", req.method());
         Assert.assertEquals(
                 Collections.singletonList(15),
@@ -25,5 +24,11 @@ public class RenamePathTest {
                 "src",
                 req.arguments().get("name")
         );
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new RenamePath(15, "/tmp/dest", "src");
+        Assert.assertEquals(Integer.valueOf(5), req.tag());
     }
 }
