@@ -8,7 +8,13 @@ public class SessionGetTest {
     @Test
     public void testCtor() {
         Req req = new SessionGet(14);
-        Assert.assertEquals(new Integer(14), req.tag());
+        Assert.assertEquals(Integer.valueOf(14), req.tag());
         Assert.assertEquals("session-get", req.method());
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new SessionGet();
+        Assert.assertEquals(Integer.valueOf(7), req.tag());
     }
 }
