@@ -10,11 +10,17 @@ public class SessionSetTest {
     @Test
     public void testCtor() {
         OptReq req = new SessionSet(9, new MapOf<>(new MapEntry<>("test", "test")));
-        Assert.assertEquals(new Integer(9), req.tag());
+        Assert.assertEquals(Integer.valueOf(9), req.tag());
         Assert.assertEquals("session-set", req.method());
         Assert.assertEquals(
                 "test",
                 req.arguments().get("test")
         );
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new SessionSet(new MapOf<>(new MapEntry<>("test", "test")));
+        Assert.assertEquals(Integer.valueOf(8), req.tag());
     }
 }
