@@ -8,7 +8,13 @@ public class SessionStatsTest {
     @Test
     public void testCtor() {
         Req req = new SessionStats(12);
-        Assert.assertEquals(new Integer(12), req.tag());
+        Assert.assertEquals(Integer.valueOf(12), req.tag());
         Assert.assertEquals("session-stats", req.method());
+    }
+
+    @Test
+    public void testCtorNoArgs() {
+        Req req = new SessionStats();
+        Assert.assertEquals(Integer.valueOf(9), req.tag());
     }
 }
